--- a/Gemini_Chatbot_with_history.ipynb
+++ b/Gemini_Chatbot_with_history.ipynb
@@ -1,45 +1,36 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "## 1- Getting started"
-      ],
       "metadata": {
         "id": "fzwD9ur2LvUj"
-      }
+      },
+      "source": [
+        "## 1- Getting started"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "x7KN8azh5rGk"
+      },
+      "outputs": [],
       "source": [
         "!pip install SpeechRecognition\n",
         "!apt install libasound2-dev portaudio19-dev libportaudio2 libportaudiocpp0 ffmpeg\n",
         "!pip install pyaudio\n",
         "!pip install ffmpeg-python\n",
         "!pip install google-generative-ai"
-      ],
-      "metadata": {
-        "id": "x7KN8azh5rGk"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "oKbzOuOd5ptc"
+      },
+      "outputs": [],
       "source": [
         "import speech_recognition as sr\n",
         "import os\n",
@@ -52,35 +43,23 @@
         "from google.colab.output import eval_js\n",
         "import google.generativeai as genai\n",
         "from google.colab import userdata"
-      ],
-      "metadata": {
-        "id": "oKbzOuOd5ptc"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "GOOGLE_API_KEY=('AIzaSyBusNIqT-avOTqEdNQe7AG8a1O5oaKCqQM')\n",
-        "genai.configure(api_key=GOOGLE_API_KEY)\n",
-        "llm = genai.GenerativeModel('gemini-pro')\n",
-        "response = llm.generate_content(\"Write a story about a magic backpack.\")\n",
-        "print(response.text)"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "_qdr-jplWq_o",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 436
         },
+        "id": "_qdr-jplWq_o",
         "outputId": "0182c10c-3a0c-4a29-db1a-f40884485024"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "In the bustling metropolis of Willow Creek, where towering skyscrapers cast long shadows upon the cobblestone streets, there resided an unassuming young girl named Anya. With her fiery red hair and piercing blue eyes, she was known for her infectious laughter and adventurous spirit.\n",
             "\n",
@@ -107,14 +86,18 @@
             "With a tear in her eye, Anya thanked Alora for the extraordinary adventure. As she bid farewell to her magical companion, Anya knew that the memories they had created would last a lifetime. And so, she left the antique shop and stepped out into the bustling streets, forever changed by the secrets and magic that Alora had revealed to her.\n"
           ]
         }
+      ],
+      "source": [
+        "GOOGLE_API_KEY=('YOUR API KEY')\n",
+        "genai.configure(api_key=GOOGLE_API_KEY)\n",
+        "llm = genai.GenerativeModel('gemini-pro')\n",
+        "response = llm.generate_content(\"Write a story about a magic backpack.\")\n",
+        "print(response.text)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "response = llm.generate_content(\"what is nlp\")\n",
-        "print(response.text)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -123,11 +106,10 @@
         "id": "rwI_rb4IMF-x",
         "outputId": "51e18198-7903-444a-99c3-8f4a16780f05"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "**Natural Language Processing (NLP)**\n",
             "\n",
@@ -162,10 +144,19 @@
             "* **Cultural and Language Barriers:** NLP models may not perform well across different cultures and languages.\n"
           ]
         }
+      ],
+      "source": [
+        "response = llm.generate_content(\"what is nlp\")\n",
+        "print(response.text)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "VkqxYKmwk67H"
+      },
+      "outputs": [],
       "source": [
         "GOOGLE_API_KEY = 'YOUR_GOOGLE_API_KEY'\n",
         "genai.configure(api_key=GOOGLE_API_KEY)\n",
@@ -173,24 +164,24 @@
         "\n",
         "# Path for storing chat history\n",
         "HISTORY_FILE = 'chat_history.json'"
-      ],
-      "metadata": {
-        "id": "VkqxYKmwk67H"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## 2- Audio Utilities"
-      ],
       "metadata": {
         "id": "fIvESZa1LqKt"
-      }
+      },
+      "source": [
+        "## 2- Audio Utilities"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Rm6FIQ4hk-Dh"
+      },
+      "outputs": [],
       "source": [
         "AUDIO_HTML = \"\"\"\n",
         "<script>\n",
@@ -293,24 +284,24 @@
         "    except Exception as e:\n",
         "        print('Error transcribing audio:', str(e))\n",
         "        return None"
-      ],
-      "metadata": {
-        "id": "Rm6FIQ4hk-Dh"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## 3- Chat utilities"
-      ],
       "metadata": {
         "id": "CkiUJjvpMHi9"
-      }
+      },
+      "source": [
+        "## 3- Chat utilities"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "XqIp-rCjlF8A"
+      },
+      "outputs": [],
       "source": [
         "def get_chat_response(user_input, history):\n",
         "    chat.history = [{\"parts\": [{\"text\": entry[0]}], \"role\": \"user\"} if i % 2 == 0 else {\"parts\": [{\"text\": entry[0]}], \"role\": \"model\"} for i, entry in enumerate(history)]\n",
@@ -327,15 +318,15 @@
         "def save_history(history):\n",
         "    with open(HISTORY_FILE, 'w') as f:\n",
         "        json.dump(history, f)"
-      ],
-      "metadata": {
-        "id": "XqIp-rCjlF8A"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "9aVeJXv_lLKJ"
+      },
+      "outputs": [],
       "source": [
         "def chat_with_text():\n",
         "    conversation_history = load_history()\n",
@@ -385,43 +376,20 @@
         "            break\n",
         "\n",
         "    save_history(conversation_history)"
-      ],
-      "metadata": {
-        "id": "9aVeJXv_lLKJ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## 4- Testing out"
-      ],
       "metadata": {
         "id": "vtP2fr-sMPRz"
-      }
+      },
+      "source": [
+        "## 4- Testing out"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "def start_chat():\n",
-        "    while True:\n",
-        "        choice = input(\"Would you like to start with voice or text input? (voice/text): \").strip().lower()\n",
-        "        if choice == 'voice':\n",
-        "            chat_with_transcription()\n",
-        "        elif choice == 'text':\n",
-        "            chat_with_text()\n",
-        "        else:\n",
-        "            print(\"Invalid choice. Please enter 'voice' or 'text'.\")\n",
-        "            continue\n",
-        "\n",
-        "        user_continue = input(\"Do you want to start a new session? (yes/no): \").strip().lower()\n",
-        "        if user_continue != 'yes':\n",
-        "            break\n",
-        "\n",
-        "# Start the chat\n",
-        "start_chat()"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -430,11 +398,10 @@
         "id": "AcpgB9NOgYMJ",
         "outputId": "4c16a084-bfd4-41fe-f979-7f8c4cd4757c"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Would you like to start with voice or text input? (voice/text): text\n",
             "Enter your message: what is nlp\n",
@@ -463,11 +430,7 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "\n",
               "<script>\n",
@@ -533,13 +496,17 @@
               "});\n",
               "\n",
               "</script>\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "You:  can you tell me what are the branches of NLP and also while you're at it tell me if llm or large language models are considered a branch of NLP or a different type of artificial intelligence branch\n",
             "Gemini:  **Branches of Natural Language Processing (NLP):**\n",
@@ -570,11 +537,7 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "\n",
               "<script>\n",
@@ -640,13 +603,17 @@
               "});\n",
               "\n",
               "</script>\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "You:  what are multimodal llms and is a voice to text and text to text llm model considered a multimodal\n",
             "Gemini:  **Multimodal LLMs**\n",
@@ -679,11 +646,7 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "\n",
               "<script>\n",
@@ -749,13 +712,17 @@
               "});\n",
               "\n",
               "</script>\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "You:  no I meant that is an element that has both voice to text function and answering text to text considered a multimodal I meant that's the model has both of them at the same time and if yes tell me what other things can I add to my model to make it bigger and if know what are multiples\n",
             "Gemini:  **Yes, a model that has both voice-to-text and text-to-text capabilities is considered a multimodal model.**\n",
@@ -782,11 +749,7 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "\n",
               "<script>\n",
@@ -852,13 +815,17 @@
               "});\n",
               "\n",
               "</script>\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "You:  who is Donald J Trump\n",
             "Gemini:  **Donald John Trump** is an American politician, businessman, and media personality who served as the 45th president of the United States from 2017 to 2021.\n",
@@ -900,11 +867,7 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "\n",
               "<script>\n",
@@ -970,9 +933,13 @@
               "});\n",
               "\n",
               "</script>\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
           "name": "stdout",
@@ -1000,7 +967,40 @@
             "Do you want to start a new session? (yes/no): no\n"
           ]
         }
+      ],
+      "source": [
+        "def start_chat():\n",
+        "    while True:\n",
+        "        choice = input(\"Would you like to start with voice or text input? (voice/text): \").strip().lower()\n",
+        "        if choice == 'voice':\n",
+        "            chat_with_transcription()\n",
+        "        elif choice == 'text':\n",
+        "            chat_with_text()\n",
+        "        else:\n",
+        "            print(\"Invalid choice. Please enter 'voice' or 'text'.\")\n",
+        "            continue\n",
+        "\n",
+        "        user_continue = input(\"Do you want to start a new session? (yes/no): \").strip().lower()\n",
+        "        if user_continue != 'yes':\n",
+        "            break\n",
+        "\n",
+        "# Start the chat\n",
+        "start_chat()"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
